# YZTA-Bootcamp-Team-49

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/pages/: 1_cleaning.py  2_analysis.py  3_variance_panel.py
data/: SOURCES.md  fetch_data.py
data/card_krueger/: config.yaml
data/castle/: config.yaml
data/divorce/: config.yaml
data/medicaid/: config.yaml
docs/adr/: 0001-tek-motor-specification.md  0002-vetted-transform-codegen.md  0003-subprocess-runner.md  0004-pydanticai-model-router.md  0005-tek-lib-pyfixest.md
docs/spikes/: s2-15-flip-spike.md
docs/sprint-comms/: sprint-2-chat.txt
pareto/: __init__.py  config.py  contracts.py  profiling.py  spec.py  streamlit_ui.py
pareto/analysis/: estimators.py  event_study.py  hypothesis.py  menu.py  runner.py  variance.py
pareto/cleaning/: agent.py  codegen.py  ledger.py  merge.py  transforms.py
pareto/llm/: cache.py  guardrails.py  narrative.py  providers.py  router.py
pareto/memory/: store.py
pareto_project/: README.md  main.py  requirements.txt
pareto_project/pareto/: __init__.py  config.py  llm_client.py
scripts/: export_r_panel.py  r_reference_medicaid.R  run_flip_spike.py
tests/: test_agent.py  test_codegen.py  test_contracts.py  test_estimators.py  test_event_study.py  test_flip_spike.py  test_hypothesis.py  test_menu.py  test_merge.py  test_narrative.py  test_profiling.py  test_r_reference.py  test_router_smoke.py  test_spec.py  test_transforms.py  test_variance.py
tests/fixtures/: r_reference_medicaid.csv
(+27 files in other folders)
