[project]
name = "pareto"
version = "0.2.0"
description = "Savunulabilir nedensel çıkarım: human-in-the-loop temizleme + spesifikasyon çokluevreni + varyans paneli"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyfixest>=0.18",
    "streamlit>=1.32",
    "plotly>=5.20",
    "pydantic>=2.6",
    "pydantic-ai[groq]>=0.0.14",
    "pyreadstat>=1.2",
    "openpyxl>=3.1",
    "charset-normalizer>=3.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pareto"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# black+isort+flake8 yerine tek araç. Gevşek başla; çekirdekte sıkılaştır.
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # assert testlerde/validatorlarda serbest

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Gevşek başla → çekirdekte sıkı.
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: gerçek sağlayıcı API çağrısı yapar (BYOK env anahtarı gerekir, yoksa atlanır)",
]
